This is the changelog for developers, != changelog for the end user 
that we distribute with the binaries. (see changelog)

04/11/2006
namespace
- Added warzow-support to q3map2

12/10/2006
namespace
- Updated help menu web links (removed map-center.com, added ETB documentation) (Shaderman)
- Added check for existing worldspawn if a new one should be added with the entity menu (Shaderman)
- Fixed Entity -> Ungroup (Topsun)
- Fixed hotkey collision ALT+M (filter botclip/Modify menu). New Modify shortcut = ALT+O (Shaderman)
- Updated Window Layout images (Shaderman)
- Fixed (TODO) XYWindow: save show-workzone option (Shaderman)
- Fixed (TODO) Toolbar: add shortcut to tooltips for toolbar buttons (Shaderman)
- Fixed (TODO) GUI: detachable submenus (Shaderman)

09/10/2006
namespace
- Added option to toggle the camera window stats on/off (Shaderman)
  (view --> show --> show stats)


08/10/2006
namespace
- Fix for bug 1106 - .wad files don't get listed in the textures menu (Shaderman)
  (http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1106)
- Added initial support for Prey (Shaderman)
- Fixed entity inspector sliders to always show (Shaderman)
- Added NOTES subsection to the entity inspector listing .def "editor_usage*" values (Shaderman)

07/10/2006
namespace
- Added "select inside" and "select touching"
  Both functions now work with multiple selectionbrushes, allowing complex
  selection operations.
- Added entries for the selectionfunctions in "Edit" and the main toolbar.

06/10/2006
namespace
- Changed ETB not to show any texture if a tag search doesn't match anything (Shaderman)
- Added View -> Filter -> "Invert filters/Reset filters" function (Shaderman)
- Fixed (TODO) Textures: remove "shaders only" option for doom3 (Shaderman)
- Fixed show shaders / shader only / shader info for doom3 and .wad file games (Shaderman)

03/10/2006
namespace
- Fix for Bug 1113 (Topsun)
  (http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1113)

03/10/2006
namespace